--- a/css/custom.css
+++ b/css/custom.css
@@ -2295,7 +2295,6 @@ button {
     background-color: #f5f5f5;
     padding: 60px 0px;
 }
-/* ... existing code ... */
 
 @media (max-width: 768px) {
     .what-bg {
@@ -2338,14 +2337,16 @@ button {
         display: flex;
         align-items: center;
         justify-content: center;
+        left:-20px;
         /* Removed left and top positioning */
     }
 
     .we-do-item .we-icon i {
-        font-size: 16px;
+        font-size: 10px;
         position: relative;
         z-index: 2;
-        left: 0; /* Reset left positioning */
+        left: 21px; /* Reset left positioning */
+        top:2px;
     }
 
     .we-do-item .we-icon i:after {
@@ -2366,7 +2367,7 @@ button {
     }
 
     .we-do-item .we-desc .we-title {
-        font-size: 15px !important; /* Slightly increased font size */
+        font-size: 16px !important; /* Slightly increased font size */
         margin-bottom: 4px;
         line-height: 1.3;
         font-weight: 600;
@@ -2398,6 +2399,7 @@ button {
         margin: 10px auto 0;
         height: 4px;
     }
+    
 }
 .project-item .project-item-inner,
 .project-img {
