--- a/css/custom.css
+++ b/css/custom.css
@@ -721,6 +721,7 @@ a:hover {
     max-width: 1400px;
     margin: 0 auto;
     margin-top: 3rem;
+    font-family: 'Poppins', serif;  
 }
 /* Additional styles for CKEditor content */
 .ck-content {
@@ -797,7 +798,7 @@ a:hover {
 }
 
 .elegant-post__excerpt p{
-    font-size: 1rem;
+    font-size: 1.1rem;
     color: #666;
     font-style: italic;
     margin: 2rem 0;
@@ -822,7 +823,39 @@ a:hover {
     object-fit: cover;
     object-position: center;
 }
+.elegant-post__content p{
+    font-size: 1rem; 
+    color: #080808;
+}
+.elegant-post__content ul,
+.elegant-post__content ol {
+    margin: 1.5rem 0;
+    padding-left: 2rem;
+    list-style-position: outside;
+    color: #080808;
+}
 
+.elegant-post__content ul {
+    list-style-type: disc;
+}
+
+.elegant-post__content ol {
+    list-style-type: decimal;
+}
+
+.elegant-post__content ul li,
+.elegant-post__content ol li {
+    margin-bottom: 0.5rem;
+    padding-left: 0.5rem;
+}
+
+/* Nested lists */
+.elegant-post__content ul ul,
+.elegant-post__content ol ol,
+.elegant-post__content ul ol,
+.elegant-post__content ol ul {
+    margin: 0.5rem 0 0.5rem 1rem;
+}
 /* Style for images within the content */
 .ck-content img {
     max-width: 600px; /* Maximum width */
